seaqt/QtGui/gen_qimagewriter.h

class QIODevice;
class QImage;
class QImageWriter;
typedef struct QIODevice QIODevice;
typedef struct QImage QImage;
typedef struct QImageWriter QImageWriter;
QImageWriter* QImageWriter_new();
QImageWriter* QImageWriter_new2(QIODevice* device, struct seaqt_string format);
QImageWriter* QImageWriter_new3(struct seaqt_string fileName);
QImageWriter* QImageWriter_new4(struct seaqt_string fileName, struct seaqt_string format);
struct seaqt_string QImageWriter_tr(const char* sourceText);
struct seaqt_string QImageWriter_trUtf8(const char* sourceText);
void QImageWriter_setFormat(QImageWriter* self, struct seaqt_string format);
struct seaqt_string QImageWriter_format(const QImageWriter* self);
void QImageWriter_setDevice(QImageWriter* self, QIODevice* device);
QIODevice* QImageWriter_device(const QImageWriter* self);
void QImageWriter_setFileName(QImageWriter* self, struct seaqt_string fileName);
struct seaqt_string QImageWriter_fileName(const QImageWriter* self);
void QImageWriter_setQuality(QImageWriter* self, int quality);
int QImageWriter_quality(const QImageWriter* self);
void QImageWriter_setCompression(QImageWriter* self, int compression);
int QImageWriter_compression(const QImageWriter* self);
void QImageWriter_setGamma(QImageWriter* self, float gamma);
float QImageWriter_gamma(const QImageWriter* self);
void QImageWriter_setSubType(QImageWriter* self, struct seaqt_string type);
struct seaqt_string QImageWriter_subType(const QImageWriter* self);
struct seaqt_array /* of struct seaqt_string */  QImageWriter_supportedSubTypes(const QImageWriter* self);
void QImageWriter_setOptimizedWrite(QImageWriter* self, bool optimize);
bool QImageWriter_optimizedWrite(const QImageWriter* self);
void QImageWriter_setProgressiveScanWrite(QImageWriter* self, bool progressive);
bool QImageWriter_progressiveScanWrite(const QImageWriter* self);
int QImageWriter_transformation(const QImageWriter* self);
void QImageWriter_setTransformation(QImageWriter* self, int orientation);
void QImageWriter_setDescription(QImageWriter* self, struct seaqt_string description);
struct seaqt_string QImageWriter_description(const QImageWriter* self);
void QImageWriter_setText(QImageWriter* self, struct seaqt_string key, struct seaqt_string text);
bool QImageWriter_canWrite(const QImageWriter* self);
bool QImageWriter_write(QImageWriter* self, QImage* image);
int QImageWriter_error(const QImageWriter* self);
struct seaqt_string QImageWriter_errorString(const QImageWriter* self);
bool QImageWriter_supportsOption(const QImageWriter* self, int option);
struct seaqt_array /* of struct seaqt_string */  QImageWriter_supportedImageFormats();
struct seaqt_array /* of struct seaqt_string */  QImageWriter_supportedMimeTypes();
struct seaqt_array /* of struct seaqt_string */  QImageWriter_imageFormatsForMimeType(struct seaqt_string mimeType);
struct seaqt_string QImageWriter_tr2(const char* sourceText, const char* disambiguation);
struct seaqt_string QImageWriter_tr3(const char* sourceText, const char* disambiguation, int n);
struct seaqt_string QImageWriter_trUtf82(const char* sourceText, const char* disambiguation);
struct seaqt_string QImageWriter_trUtf83(const char* sourceText, const char* disambiguation, int n);